[build-system]
requires = [
    "setuptools >= 68.1.2",
    "versioningit >= 2.0.1"
]
build-backend = 'setuptools.build_meta'

[project]
name = "qcodes_contrib_drivers"
description = "User contributed drivers for QCoDeS"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",]
requires-python = ">=3.9"
dependencies = [ "qcodes>=0.42.0", "versioningit>=2.0.1", "packaging", "pandas"]
dynamic = [ "version",]

[[project.maintainers]]
name = "QCoDeS Community"
email = "qcodes-support@microsoft.com"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/QCoDeS/Qcodes_contrib_drivers"
Documentation = "https://qcodes.github.io/Qcodes_contrib_drivers/"
Source = "https://github.com/qcodes/qcodes_contrib_drivers"
Tracker = "https://github.com/QCoDeS/Qcodes_contrib_drivers/issues"

[project.optional-dependencies]
test = [
    "pytest>=6.2.2",
    "pytest-mock",
    "mypy>=0.940",
    "pytest-cov>=3.0.0",
    "coverage[toml]>=6.2",
    "pyvisa-sim",
    "types-tqdm>=4.64.6",
    "pandas-stubs",
]
docs = [ "sphinx", "sphinx_rtd_theme", "nbsphinx", ]

[tool.mypy]
strict_optional = true
disallow_untyped_decorators = true
ignore_missing_imports = false
show_column_numbers = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "qcodes_contrib_drivers.drivers.Spectrum.pyspcm"
    ]
ignore_errors = true

# these are packages that we import
# but either don't have stubs or we
# dont have them installed.
[[tool.mypy.overrides]]
module = [
    "cffi",
    "keysightSD1",
    "nidaqmx.*",
    "niswitch.*",
    "pandas",
    "py_header.*",
    "pyspcm",
    "spirack",
    "zhinst.*",
    "ruamel.*",
    "msl.loadlib"
]
ignore_missing_imports = true

[tool.setuptools]
zip-safe = false
license-files = [
    "LICENSE_TEKTRONIX_AWG520_KEITHLEY_2700",
    "LICENSE",
]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.versioningit]
default-version = "0.0"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{branch}.{vcs}{rev}"
dirty = "{next_version}.dev{distance}+{branch}.{vcs}{rev}.dirty"
distance-dirty = "{next_version}.dev{distance}+{branch}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.onbuild]
source-file = "qcodes_contrib_drivers/_version.py"
build-file = "qcodes_contrib_drivers/_version.py"
