[metadata]
name = qcodes_contrib_drivers
maintainer = QCoDeS Community
maintainer_email = qcodes-support@microsoft.com
description = User contributed drivers for QCoDeS
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/QCoDeS/Qcodes_contrib_drivers
classifiers =
          Development Status :: 3 - Alpha
          Intended Audience :: Science/Research
          License :: OSI Approved :: MIT License
          License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
          Programming Language :: Python :: 3 :: Only
          Programming Language :: Python :: 3.7
          Topic :: Scientific/Engineering
license = MIT
license_files =
    LICENSE_TEKTRONIX_AWG520_KEITHLEY_2700
    LICENSE
project_urls =
    Documentation = https://qcodes.github.io/Qcodes_contrib_drivers/
    Source = https://github.com/qcodes/qcodes_contrib_drivers
    Tracker = https://github.com/QCoDeS/Qcodes_contrib_drivers/issues

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
   qcodes>=0.4.0

[versioneer]
VCS = git
style = pep440
versionfile_source = qcodes_contrib_drivers/_version.py
versionfile_build = qcodes_contrib_drivers/_version.py
tag_prefix = v
parentdir_prefix = qcodes_contrib_drivers-

[mypy]
strict_optional = True
disallow_untyped_decorators = True
ignore_missing_imports = True
show_column_numbers = True
warn_unused_ignores = True
warn_unused_configs = True
warn_redundant_casts = True
show_error_codes = True

[mypy-qcodes_contrib_drivers._version]
ignore_errors = True

[mypy-qcodes_contrib_drivers.drivers.Spectrum.pyspcm]
ignore_errors = True
